--- a/assets/templates/pagoexitoso.html
+++ b/assets/templates/pagoexitoso.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Colaboración Exitosa</title>
-    <link rel="stylesheet" href="assets/styles/style.css">
+    <link rel="stylesheet" href="https://github.com/solidsnk86/LoginCards-RedirectionPages/blob/master/assets/styles/style.css">
     <link rel="stylesheet" href="formularioWeb-1-master/assets/icons/boxicons/css/boxicons.min.css">
     <link rel="stylesheet" href="formularioWeb-1-master/assets/icons/remixicon/remixicon.css">
     <link rel="stylesheet" href="formularioWeb-1-master/assets/icons/bootstrap-icons/bootstrap-icons.min.css">
