--- a/assets/templates/pagoenproceso.html
+++ b/assets/templates/pagoenproceso.html
@@ -5,11 +5,58 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Procesando el pago</title>
-    <link rel="stylesheet" href="https://github.com/solidsnk86/LoginCards-RedirectionPages/blob/master/assets/styles/style.css">
     <link rel="stylesheet" href="formularioWeb-1-master/assets/icons/boxicons/css/boxicons.min.css">
     <link rel="stylesheet" href="formularioWeb-1-master/assets/icons/remixicon/remixicon.css">
     <link rel="stylesheet" href="formularioWeb-1-master/assets/icons/bootstrap-icons/bootstrap-icons.min.css">
 </head>
+
+<style>
+    /* Procesando pago */
+.container-card-proceso {
+    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
+    background-color: #eaeaea;
+    text-align: center;
+    width: 360px;
+    margin: 20px auto;
+}
+
+.container-proceso {
+    background-color: #FAFAFA;
+    border-radius: 1%;
+    padding: 3px;
+    box-shadow: 0 0 2px rgba(0, 0, 0, 0.274);
+}
+
+.container-proceso hr {
+    background-color: #FAFAFA;
+    margin: 0 20px 0 20px;
+    border-radius: 25%;
+    height: 0.1px;
+}
+
+.procesando {
+    margin: 9px;
+}
+
+/* Footer */
+footer {
+	margin-top: 20px;
+	text-align: center;
+    font-weight: bold;
+    text-shadow: 0 0 1px #000;
+}
+
+footer a {
+    text-decoration: none;
+    color: rgb(0, 140, 255);
+}
+
+footer a:hover {
+    text-decoration: underline;
+}
+
+</style>
+
 <body class="container-card-proceso">
     
     <article class="container-proceso">
@@ -27,7 +74,7 @@
 </body>
 
 <footer>
-    <p>&copy;formularioWeb 2023 - Desarrollo por <span style="color: royalblue;"><a href="https://www.instagram.com/calcagni_gabriel26/?ishid=ZDdkNTZiNTM%3D">SolidSnk86</a></span></p>
+    <p>&copy;formularioWeb 2023 - Desarrollo <span style="color: royalblue;"><a href="https://www.instagram.com/calcagni_gabriel26/?ishid=ZDdkNTZiNTM%3D">SolidSnk86</a></span></p>
 </footer>
 
 </html>
