--- a/assets/templates/pagoexitoso.html
+++ b/assets/templates/pagoexitoso.html
@@ -5,13 +5,78 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Colaboración Exitosa</title>
-    <link rel="stylesheet" href="https://github.com/solidsnk86/LoginCards-RedirectionPages/blob/master/assets/styles/style.css">
-    <link rel="stylesheet" href="formularioWeb-1-master/assets/icons/boxicons/css/boxicons.min.css">
-    <link rel="stylesheet" href="formularioWeb-1-master/assets/icons/remixicon/remixicon.css">
-    <link rel="stylesheet" href="formularioWeb-1-master/assets/icons/bootstrap-icons/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="/formularioWeb-1-master/assets/icons/boxicons/css/boxicons.min.css">
+    <link rel="stylesheet" href="/formularioWeb-1-master/assets/icons/remixicon/remixicon.css">
+    <link rel="stylesheet" href="/formularioWeb-1-master/assets/icons/bootstrap-icons/bootstrap-icons.min.css">
 </head>
 <body class="body-container-pago">
 
+    <style>
+        /* Pago Exitoso */
+.body-container-pago {
+    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
+    background-color: #eaeaea;
+}
+
+.body-container-pago li,
+a {
+    text-decoration: none;
+    list-style: none;
+}
+
+.container-pago {
+    background-color: #FAFAFA;
+    border-radius: 3px;
+    width: 400px;
+    margin: 20px auto;
+}
+
+.container-pago hr {
+    margin: 0 20px 0 20px;
+    border: 0.1px solid #e2e0e0;
+    border-radius: 25%;
+}
+
+.header-container-pago {
+    text-align: center;
+}
+
+#check-circle {
+    margin: 14px 0 0 0;
+    color: green;
+    font-size: 2.5rem;
+}
+
+.pago-exitoso {
+    margin: auto 14px;
+}
+
+.pago-exitoso li a {
+    color: #1877F2;
+    font-size: small;
+}
+
+.pago-exitoso-contact {
+    padding: 0 0 14px 0;
+}
+
+.container-detalle {
+    color: #777;
+    background-color: #FAFAFA;
+    border: 0.1px solid #DBDBDB;
+    border-radius: 3px;
+    margin: 0 20px 0 20px;
+    padding: 10px 5px 10px 5px;
+}
+
+.container-detalle p {
+    text-align: center;
+}
+
+.container-detalle li p {
+    text-align: left;
+}
+    </style>
     <main class="container-pago">
         <header class="header-container-pago">
         <i id="check-circle" class="bx bi-check-circle-fill"></i>
