--- a/assets/templates/pagoexitoso.html
+++ b/assets/templates/pagoexitoso.html
@@ -76,6 +76,22 @@ a {
 .container-detalle li p {
     text-align: left;
 }
+/* Footer */
+footer {
+	margin-top: 20px;
+	text-align: center;
+    font-weight: bold;
+    text-shadow: 0 0 1px #000;
+}
+
+footer a {
+    text-decoration: none;
+    color: rgb(0, 140, 255);
+}
+
+footer a:hover {
+    text-decoration: underline;
+}
     </style>
     <main class="container-pago">
         <header class="header-container-pago">
