--- a/assets/templates/pagoexitoso.html
+++ b/assets/templates/pagoexitoso.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Colaboración Exitosa</title>
-    <link rel="stylesheet" href="/formularioWeb-1-master/assets/icons/boxicons/css/boxicons.min.css">
-    <link rel="stylesheet" href="/formularioWeb-1-master/assets/icons/remixicon/remixicon.css">
-    <link rel="stylesheet" href="/formularioWeb-1-master/assets/icons/bootstrap-icons/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="../icons/boxicons/css/boxicons.min.css">
+    <link rel="stylesheet" href="../icons/remixicon/remixicon.css">
+    <link rel="stylesheet" href="../icons/bootstrap-icons/bootstrap-icons.min.css">
 </head>
 <body class="body-container-pago">
 
@@ -76,6 +76,7 @@ a {
 .container-detalle li p {
     text-align: left;
 }
+
 /* Footer */
 footer {
 	margin-top: 20px;
@@ -104,8 +105,8 @@ footer a:hover {
             <div class="container-detalle">
                 <p>Detalle</p>
                 <hr>
-                <li><p>En concepto de colaboración con el desarrollador del formulario web</p></li>
-                <li><p>Costo de la colaboración $500 (pesos)</p></li>
+                <li><p>▪ En concepto de colaboración con el desarrollador del formulario web</p></li>
+                <li><p>▪ Costo de la colaboración $500 (pesos)</p></li>
             </div>
             <p>Si desea contratar el servicio de desarrollo web, formularios perzonalizados, currículums online, no dudes en contactarme:</p>
             <ul class="pago-exitoso-contact">
@@ -115,7 +116,7 @@ footer a:hover {
     </article>
     </main>
 
-    <h5><i class="bx bi-arrow-left"></i><a href="https://solidsnk86.github.io/formularioWeb/"> Volver al formulario</a></h5>
+    <h5><i class="bx bi-arrow-left"></i><a href="https://solidsnk86.github.io/formularioWeb/" style="color: #1877F2;"> Volver al formulario</a></h5>
 
 <footer>
     <p>&copy;formularioWeb 2023 - Desarrollo <span style="color: royalblue;"><a href="https://www.instagram.com/calcagni_gabriel26/?ishid=ZDdkNTZiNTM%3D">SolidSnk86</a></span></p>
