--- a/assets/templates/pagoenproceso.html
+++ b/assets/templates/pagoenproceso.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Procesando el pago</title>
-    <link rel="stylesheet" href="formularioWeb-1-master/assets/icons/boxicons/css/boxicons.min.css">
-    <link rel="stylesheet" href="formularioWeb-1-master/assets/icons/remixicon/remixicon.css">
-    <link rel="stylesheet" href="formularioWeb-1-master/assets/icons/bootstrap-icons/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="../icons/boxicons/css/boxicons.min.css">
+    <link rel="stylesheet" href="../icons/remixicon/remixicon.css">
+    <link rel="stylesheet" href="../icons/bootstrap-icons/bootstrap-icons.min.css">
 </head>
 
 <style>
@@ -65,6 +65,7 @@ footer a:hover {
         <div class="procesando">
             <p>¡Hola! Gracias por tu apoyo.</p>
             <h5><i class="ri-history-line"></i> Estamos procesando tu pago...</h5>
+            <p>En breve recibirás un correo electrónico con la confirmación del pago.</p>
             <img src="" alt="" width="200px" height="auto">
         </div>
     </article>
