--- a/assets/templates/pagoexitoso.html
+++ b/assets/templates/pagoexitoso.html
@@ -61,16 +61,22 @@ a {
 }
 
 .container-detalle {
-    color: #777;
     background-color: #FAFAFA;
-    border: 0.1px solid #DBDBDB;
     border-radius: 3px;
     margin: 0 20px 0 20px;
     padding: 10px 5px 10px 5px;
+    box-shadow: -1px 2px 5px rgba(0,0,0,0.174);
+}
+
+.container-detalle hr {
+    margin: 0;
+    border: 0.1px solid #e2e0e0;
 }
 
 .container-detalle p {
+    color: #555;
     text-align: center;
+    font-size: 0.9rem;
 }
 
 .container-detalle li p {
