--- a/assets/templates/pagoexitoso.html
+++ b/assets/templates/pagoexitoso.html
@@ -116,8 +116,8 @@ footer a:hover {
             </div>
             <p>Si desea contratar el servicio de desarrollo web, formularios perzonalizados, currículums online, no dudes en contactarme:</p>
             <ul class="pago-exitoso-contact">
-            <li><a href="tel:+5492665290020"><i class="bx bi-phone"></i> +5492665290020</a></li>
-            <li><a href="mailto:calcagni.gabriel86@gmail.com"><i class="bx bi-envelope"></i> calcagni.gabriel86@gmail.com</a></li>
+            <li><i class="bx bi-phone"></i><a href="tel:+5492665290020"> +5492665290020</a></li>
+            <li><i class="bx bi-envelope"></i><a href="mailto:calcagni.gabriel86@gmail.com"></i> calcagni.gabriel86@gmail.com</a></li>
             </ul>
     </article>
     </main>
