--- a/assets/templates/pagoexitoso.html
+++ b/assets/templates/pagoexitoso.html
@@ -65,7 +65,7 @@ a {
     border-radius: 3px;
     margin: 0 20px 0 20px;
     padding: 10px 5px 10px 5px;
-    box-shadow: -1px 2px 5px rgba(0,0,0,0.174);
+    border: 2px dashed #e2e0e0;
 }
 
 .container-detalle hr {
@@ -122,7 +122,7 @@ footer a:hover {
     </article>
     </main>
 
-    <h5><i class="bx bi-arrow-left"></i><a href="https://solidsnk86.github.io/formularioWeb/" style="color: #1877F2;"> Volver al formulario</a></h5>
+    <h5><i class="bx bi-arrow-left"></i><a href="https://solidsnk86.github.io/formularioWeb/" style="color: #1877F2; text-decoration: underline;"> Volver al formulario</a></h5>
 
 <footer>
     <p>&copy;formularioWeb 2023 - Desarrollo <span style="color: royalblue;"><a href="https://www.instagram.com/calcagni_gabriel26/?ishid=ZDdkNTZiNTM%3D">SolidSnk86</a></span></p>
